# snowflake-data-security-monitor

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-ci.yml  security-checks.yml
config/: compliance_mapping.yaml  controls.yaml  risk_scoring.yaml  settings.yaml
dashboard/: README.md  streamlit_app.py
docs/: architecture.md  compliance_mapping.md  controls_catalog.md  limitations.md  risk_scoring_model.md  security_queries.md  setup_guide.md  snowflake_permissions.md
notebooks/: exploratory_snowflake_security_checks.ipynb
outputs/sample/: findings.csv  findings.json  risk_score_summary.csv
reports/sample/: executive_summary.md  remediation_plan.md  technical_report.md
scripts/: create_demo_data.py  generate_sample_outputs.py  run_scan.sh
sql/: access_history.sql  databases.sql  grants_to_roles.sql  grants_to_users.sql  login_history.sql  masking_policies.sql  query_history.sql  roles.sql  row_access_policies.sql  schemas.sql  shares.sql  stages.sql  tables.sql  users.sql
src/snowflake_data_security_monitor/: __init__.py  main.py
src/snowflake_data_security_monitor/auth/: __init__.py  provider.py
src/snowflake_data_security_monitor/checks/: __init__.py  accountadmin.py  base.py  helpers.py  policies.py  public_role.py  (+3 more)
tests/: __init__.py  test_collectors.py  test_config_loader.py  test_finding_model.py  test_markdown_reports.py  test_package_import.py  test_sample_outputs_and_dashboard.py  test_scoring_compliance_exports.py  test_security_checks.py  test_snowflake_auth.py  test_snowflake_client.py
(+30 files in other folders)
