[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snowflake-data-security-monitor"
version = "0.1.0"
description = "Foundation for a Snowflake data security posture monitoring tool."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Portfolio Project" }]
dependencies = [
  "pydantic>=2.7,<3.0",
  "PyYAML>=6.0,<7.0",
  "pandas>=2.2,<3.0",
  "python-dotenv>=1.0,<2.0",
  "rich>=13.7,<14.0",
  "typer>=0.12,<1.0",
  "snowflake-connector-python>=3.10,<4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
  "ruff>=0.5,<1.0",
  "mypy>=1.10,<2.0",
  "types-PyYAML>=6.0,<7.0",
]
dashboard = ["streamlit>=1.36,<2.0"]

[project.scripts]
snowflake-security-monitor = "snowflake_data_security_monitor.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
snowflake_data_security_monitor = ["reporting/templates/*.tmpl"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["snowflake_data_security_monitor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
